[gd_scene load_steps=5 format=3 uid="uid://clc2ay66o8il7"]

[ext_resource type="Script" path="res://red_mob.gd" id="1_5878e"]
[ext_resource type="PackedScene" uid="uid://bcnif15hic1bj" path="res://characters/slime/slime_red.tscn" id="1_gswcb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cdlpv"]
radius = 52.0865

[sub_resource type="CircleShape2D" id="CircleShape2D_71qqv"]
radius = 259.625

[node name="RedMob" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_5878e")

[node name="SlimeRed" parent="." instance=ExtResource("1_gswcb")]
unique_name_in_owner = true
position = Vector2(1, 26)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -3)
shape = SubResource("CircleShape2D_cdlpv")

[node name="DeathDamageRange" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathDamageRange"]
shape = SubResource("CircleShape2D_71qqv")

[connection signal="body_entered" from="DeathDamageRange" to="." method="_on_death_damage_range_entered"]
[connection signal="body_exited" from="DeathDamageRange" to="." method="_on_death_damage_range_body_exited"]
